...
  }

  UNSAFE_componentWillReceiveProps(nextProps: SettingsProps) {
    if (
      !this.props.hasViewedWalletError &&
      this.props.cloudBackupError !== null &&
      (this.props.currentScreen === 'Settings' ||
        nextProps.currentScreen === 'Settings')
    ) {
      this.props.viewedWalletError(true)
    }
    if (
      this.props.currentScreen === nextProps.currentScreen &&
...

  renderBackupTitleText = () => {
    if (
      !this.props.lastSuccessfulBackup &&
      !this.props.lastSuccessfulCloudBackup
    ) {
      return 'Create a Backup'
    } else if (this.props.connectionsUpdated) {
      return this.renderLastBackupText()
    } else {
      return 'Manual Backup'
    }
  }
...
