// @flow
export const EDIT_ICON_DIMENSIONS = 30
export const PASS_CODE_ASTERISK_TOP_OFFSET = 5
export const USERNAME_TEST_ID = 'settings-user-name-label'
export const PASS_CODE_TEST_ID = 'settings-pass-code-label'
export const PASS_CODE_ASTERISK_TEST_ID = 'settings-pass-code-asterisk-label'
export const TOUCH_ID_TEST_ID = 'settings-touch-id-label'
export const CHAT_TEST_ID = 'settings-chat-id-label'
export const USER_AVATAR_TEST_ID = 'settings-user-avatar-label'
export const BACKUP_DATA_WALLET = 'settings-backup-data-wallet'
export const ABOUT_APP_TEST_ID = 'settings-about-app-label'
export const SEND_LOGS_TEST_ID = 'settings-sendlogs-label'
