...
            <Icon
              mediumLarge
              iconStyle={[{ marginBottom: 10 }]}
              src={download}
            />
            <CustomText transparentBg center style={[styles.title2]}>
              Downloaded .zip Backup
            </CustomText>
            <CustomText
              size="14"
              transparentBg
              center
              style={[{ color: 'white' }]}
...
